[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "VixivClient"
version = "0.1.7"
description = "Interface to the Vixiv API"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Michael Bonaventura", email = "mike.b@vixiv.net" },
  { name = "Zhenyu Dai", email = "zhenyu@vixiv.net" },
]
dependencies = [
    "trimesh>=4.6.9",
    "numpy>=2.2.6",
]

[tool.setuptools.packages.find]
exclude = [
    "mesh*",
    "concurrent_requests.py",
    "workflow.py",
]
